[gd_scene load_steps=9 format=3 uid="uid://cqbxejr72xyb3"]

[ext_resource type="Script" path="res://scenes/hud/tool_bar_hud.gd" id="1_nptwf"]
[ext_resource type="Texture2D" uid="uid://jepydxa83khl" path="res://assets/ui/tool_shovel.png" id="2_0h5o0"]
[ext_resource type="Texture2D" uid="uid://tkvdjxmelk14" path="res://assets/ui/GUI-1.png.png" id="2_o1r3x"]
[ext_resource type="Texture2D" uid="uid://dtt1bftyojqql" path="res://assets/ui/tool_pickaxe.png" id="3_cgl1g"]
[ext_resource type="Texture2D" uid="uid://ct0nr10ry1ih3" path="res://assets/ui/tool_torch.png" id="4_aow0i"]
[ext_resource type="Texture2D" uid="uid://2he2vg8y0whc" path="res://assets/ui/tool_wand.png" id="5_2rq8x"]
[ext_resource type="Texture2D" uid="uid://y7ksqdsx5ymh" path="res://assets/ui/tool_bomb.png" id="6_5e1u8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ie0ih"]
texture = ExtResource("2_o1r3x")
texture_margin_left = 1.0
texture_margin_right = 1.0

[node name="ToolBarHud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nptwf")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -125.0
offset_right = 745.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_ie0ih")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 1.0
offset_top = 955.0
offset_right = 744.0
offset_bottom = 1080.0
mouse_filter = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="ActionsContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AttackButton" type="TextureButton" parent="MarginContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("5_2rq8x")
stretch_mode = 0

[node name="TorchButton" type="TextureButton" parent="MarginContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("4_aow0i")
stretch_mode = 0

[node name="DestroyButton" type="TextureButton" parent="MarginContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("3_cgl1g")
stretch_mode = 0

[node name="PotionButton" type="TextureButton" parent="MarginContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("6_5e1u8")
stretch_mode = 0

[node name="SummonButton" type="TextureButton" parent="MarginContainer/ActionsContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
action_mode = 0
texture_normal = ExtResource("2_0h5o0")
stretch_mode = 0

[connection signal="button_down" from="MarginContainer/ActionsContainer/AttackButton" to="." method="_on_attack_button_button_down"]
[connection signal="button_up" from="MarginContainer/ActionsContainer/AttackButton" to="." method="_on_attack_button_button_up"]
[connection signal="button_down" from="MarginContainer/ActionsContainer/TorchButton" to="." method="_on_torch_button_button_down"]
[connection signal="button_down" from="MarginContainer/ActionsContainer/DestroyButton" to="." method="_on_destroy_button_button_down"]
[connection signal="button_down" from="MarginContainer/ActionsContainer/PotionButton" to="." method="_on_potion_button_button_down"]
[connection signal="button_down" from="MarginContainer/ActionsContainer/SummonButton" to="." method="_on_summon_button_button_down"]
